--- a/Second-Solution-Attempt-2/Second-Solution-Attempt-2/Second-Solution-Attempt-2.csproj
+++ b/Second-Solution-Attempt-2/Second-Solution-Attempt-2/Second-Solution-Attempt-2.csproj
@@ -70,6 +70,7 @@
     <Compile Include="other\Circle.cs" />
     <Compile Include="appmanager\ContactHelper.cs" />
     <Compile Include="other\Figure.cs" />
+    <Compile Include="tests\ContactModificationTests.cs" />
     <Compile Include="tests\GroupCreationTests.cs" />
     <Compile Include="model\GroupData.cs" />
     <Compile Include="appmanager\GroupHelper.cs" />
