--- a/Second-Solution-Attempt-2/Second-Solution-Attempt-2/Second-Solution-Attempt-2.csproj
+++ b/Second-Solution-Attempt-2/Second-Solution-Attempt-2/Second-Solution-Attempt-2.csproj
@@ -71,6 +71,7 @@
     <Compile Include="appmanager\ContactHelper.cs" />
     <Compile Include="other\Figure.cs" />
     <Compile Include="tests\ContactModificationTests.cs" />
+    <Compile Include="tests\ContactRemovalTests.cs" />
     <Compile Include="tests\GroupCreationTests.cs" />
     <Compile Include="model\GroupData.cs" />
     <Compile Include="appmanager\GroupHelper.cs" />
