Parallel Run was implemented

--- a/Second-Solution-Attempt-2/Second-Solution-Attempt-2/Second-Solution-Attempt-2.csproj
+++ b/Second-Solution-Attempt-2/Second-Solution-Attempt-2/Second-Solution-Attempt-2.csproj
@@ -84,6 +84,7 @@
     <Compile Include="model\InitContactData.cs" />
     <Compile Include="tests\GroupModificationTests.cs" />
     <Compile Include="tests\GroupRemovalTests.cs" />
+    <Compile Include="tests\TestSuiteFixture.cs" />
     <Compile Include="tests\TestBase.cs" />
   </ItemGroup>
   <ItemGroup>
