--- a/Second-Solution-Attempt-2/Second-Solution-Attempt-2/Second-Solution-Attempt-2.csproj
+++ b/Second-Solution-Attempt-2/Second-Solution-Attempt-2/Second-Solution-Attempt-2.csproj
@@ -73,6 +73,7 @@
     <Compile Include="tests\AuthTestBase.cs" />
     <Compile Include="tests\ContactModificationTests.cs" />
     <Compile Include="tests\ContactRemovalTests.cs" />
+    <Compile Include="tests\CyclesExamples.cs" />
     <Compile Include="tests\GroupCreationTests.cs" />
     <Compile Include="model\GroupData.cs" />
     <Compile Include="appmanager\GroupHelper.cs" />
